--- a/MatchGame/MainWindow.xaml
+++ b/MatchGame/MainWindow.xaml
@@ -21,37 +21,39 @@
             <RowDefinition/>
         </Grid.RowDefinitions>
         <TextBlock Grid.Column="0" HorizontalAlignment="Center" Grid.Row="0" Text="?" 
-            VerticalAlignment="Center" RenderTransformOrigin="0.433,0.482" FontSize="36"/>
+            VerticalAlignment="Center" RenderTransformOrigin="0.433,0.482" FontSize="36" MouseDown="TextBlock_MouseDown"/>
         <TextBlock Grid.Column="0" HorizontalAlignment="Center" Grid.Row="1" Text="?" 
-            VerticalAlignment="Center" RenderTransformOrigin="0.433,0.482" FontSize="36"/>
+            VerticalAlignment="Center" RenderTransformOrigin="0.433,0.482" FontSize="36" MouseDown="TextBlock_MouseDown"/>
         <TextBlock Grid.Column="0" HorizontalAlignment="Center" Grid.Row="2" Text="?" 
-            VerticalAlignment="Center" RenderTransformOrigin="0.433,0.482" FontSize="36"/>
+            VerticalAlignment="Center" RenderTransformOrigin="0.433,0.482" FontSize="36" MouseDown="TextBlock_MouseDown"/>
         <TextBlock Grid.Column="0" HorizontalAlignment="Center" Grid.Row="3" Text="?" 
-            VerticalAlignment="Center" RenderTransformOrigin="0.433,0.482" FontSize="36"/>
+            VerticalAlignment="Center" RenderTransformOrigin="0.433,0.482" FontSize="36" MouseDown="TextBlock_MouseDown"/>
         <TextBlock Grid.Column="1" HorizontalAlignment="Center" Grid.Row="0" Text="?" 
-            VerticalAlignment="Center" RenderTransformOrigin="0.433,0.482" FontSize="36"/>
+            VerticalAlignment="Center" RenderTransformOrigin="0.433,0.482" FontSize="36" MouseDown="TextBlock_MouseDown"/>
         <TextBlock Grid.Column="1" HorizontalAlignment="Center" Grid.Row="1" Text="?" 
-            VerticalAlignment="Center" RenderTransformOrigin="0.433,0.482" FontSize="36"/>
+            VerticalAlignment="Center" RenderTransformOrigin="0.433,0.482" FontSize="36" MouseDown="TextBlock_MouseDown"/>
         <TextBlock Grid.Column="1" HorizontalAlignment="Center" Grid.Row="2" Text="?" 
-            VerticalAlignment="Center" RenderTransformOrigin="0.433,0.482" FontSize="36"/>
+            VerticalAlignment="Center" RenderTransformOrigin="0.433,0.482" FontSize="36" MouseDown="TextBlock_MouseDown"/>
         <TextBlock Grid.Column="1" HorizontalAlignment="Center" Grid.Row="3" Text="?" 
-            VerticalAlignment="Center" RenderTransformOrigin="0.433,0.482" FontSize="36"/>
+            VerticalAlignment="Center" RenderTransformOrigin="0.433,0.482" FontSize="36" MouseDown="TextBlock_MouseDown"/>
         <TextBlock Grid.Column="2" HorizontalAlignment="Center" Grid.Row="0" Text="?" 
-            VerticalAlignment="Center" RenderTransformOrigin="0.433,0.482" FontSize="36"/>
+            VerticalAlignment="Center" RenderTransformOrigin="0.433,0.482" FontSize="36" MouseDown="TextBlock_MouseDown"/>
         <TextBlock Grid.Column="2" HorizontalAlignment="Center" Grid.Row="1" Text="?" 
-            VerticalAlignment="Center" RenderTransformOrigin="0.433,0.482" FontSize="36"/>
+            VerticalAlignment="Center" RenderTransformOrigin="0.433,0.482" FontSize="36" MouseDown="TextBlock_MouseDown"/>
         <TextBlock Grid.Column="2" HorizontalAlignment="Center" Grid.Row="2" Text="?" 
-            VerticalAlignment="Center" RenderTransformOrigin="0.433,0.482" FontSize="36"/>
+            VerticalAlignment="Center" RenderTransformOrigin="0.433,0.482" FontSize="36" MouseDown="TextBlock_MouseDown"/>
         <TextBlock Grid.Column="2" HorizontalAlignment="Center" Grid.Row="3" Text="?" 
-            VerticalAlignment="Center" RenderTransformOrigin="0.433,0.482" FontSize="36"/>
+            VerticalAlignment="Center" RenderTransformOrigin="0.433,0.482" FontSize="36" MouseDown="TextBlock_MouseDown"/>
         <TextBlock Grid.Column="3" HorizontalAlignment="Center" Grid.Row="3" Text="?" 
-            VerticalAlignment="Center" RenderTransformOrigin="0.433,0.482" FontSize="36"/>
+            VerticalAlignment="Center" RenderTransformOrigin="0.433,0.482" FontSize="36" MouseDown="TextBlock_MouseDown"/>
         <TextBlock Grid.Column="3" HorizontalAlignment="Center" Grid.Row="2" Text="?" 
-            VerticalAlignment="Center" RenderTransformOrigin="0.433,0.482" FontSize="36"/>
+            VerticalAlignment="Center" RenderTransformOrigin="0.433,0.482" FontSize="36" MouseDown="TextBlock_MouseDown"/>
         <TextBlock Grid.Column="3" HorizontalAlignment="Center" Grid.Row="1" Text="?" 
-            VerticalAlignment="Center" RenderTransformOrigin="0.433,0.482" FontSize="36"/>
+            VerticalAlignment="Center" RenderTransformOrigin="0.433,0.482" FontSize="36" MouseDown="TextBlock_MouseDown"/>
         <TextBlock Grid.Column="3" HorizontalAlignment="Center" Text="?" 
-            VerticalAlignment="Center" RenderTransformOrigin="0.433,0.482" FontSize="36"/>
+            VerticalAlignment="Center" RenderTransformOrigin="0.433,0.482" FontSize="36" MouseDown="TextBlock_MouseDown"/>
+        <TextBlock x:Name="timeTextBlock" HorizontalAlignment="Center" Margin="0,0,0,0" Grid.Row="4" Text="Elapsed Time" 
+                   TextWrapping="Wrap" VerticalAlignment="Center" FontSize="36" Grid.ColumnSpan="4" MouseDown="TimeTextBlock_MouseDown"/>
 
 
 
